terraform/security.tf
resource "aws_security_group" "rtsp_sg" {
  name        = "rtsp-sg"
  description = "Allow RTSP and SSH access"
  vpc_id      = aws_vpc.main.id

  ingress {
  from_port   = 8554  # Changed from 554
  to_port     = 8554  # Changed from 554
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  description = "RTSP"
  } 

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "kafka_sg" {
  name        = "kafka-sg"
  description = "Allow Kafka, Zookeeper, and SSH access"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 9092
    to_port     = 9092
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Kafka"
  }

  ingress {
    from_port   = 2181
    to_port     = 2181
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Zookeeper"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
[ec2-user@ip-10-0-1-75 ~]$ sudo docker network create kafka-net --driver bridge || true
Error response from daemon: network with name kafka-net already exists

resource "aws_security_group" "k8s_sg" {
  name        = "k8s-sg"
  description = "Allow HTTP, inference, and SSH access"
  vpc_id      = aws_vpc.main.id

  ingress {
  from_port   = 8080  # Changed from 5000
  to_port     = 8080  # Changed from 5000
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]  
  description = "Inference API"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
